# project-action

./: .eslintrc.yml  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  package-lock.json  package.json  server.js  webpack.config.js
.github/workflows/: test.yml
__fixtures__/package_files/correct/: composer.json  package.json  pyproject.toml
__fixtures__/package_files/wrong/: composer.json  package.json  pyproject.toml
__fixtures__/project_source/: docker-compose.yml
__fixtures__/projects_with_spec/not_verifiable/css_project/: spec.yml
__fixtures__/projects_with_spec/not_verifiable/project_without_language/: spec.yml
__fixtures__/projects_with_spec/not_verifiable/ruby_project/: spec.yml
__fixtures__/projects_with_spec/verifiable/js_project/: spec.yml
__fixtures__/projects_with_spec/verifiable/php_project/: spec.yml
__fixtures__/projects_with_spec/verifiable/python_project/: spec.yml
__tests__/: index.test.js  packageChecker.test.js
examples/: hexlet-check.yml
src/: index.js  packageChecker.js  routes.js
