[tool.poetry]
name = "wrong-package-name"
version = "0.1.0"
description = "Task manager"
authors = ["Hexlet team <team@hexlet.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://hexlet.io"

packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
django-bootstrap4 = "^2.3.1"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
coverage = "^5.3.1"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
